[gd_scene load_steps=3 format=3 uid="uid://d0vjjalh6mm80"]

[ext_resource type="Script" uid="uid://drlewby2ksmgw" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="FontFile" uid="uid://c6a0a6x1lusbb" path="res://fonts/Xolonium-Regular.ttf" id="2_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Message" type="Label" parent="."]
offset_left = -1.0
offset_right = 234.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 20
text = "Num balls = "

[node name="Start" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -51.0
offset_right = 154.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.52467, 0.345682, 0.975592, 1)
theme_override_fonts/font = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 80
text = "Start"

[node name="Quit" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 32
text = "Quit
"

[node name="StepSlider" type="HSlider" parent="."]
offset_left = 178.0
offset_top = 489.0
offset_right = 482.0
offset_bottom = 505.0
min_value = 18.0
value = 40.0

[node name="StepSliderInfo" type="Label" parent="."]
offset_left = 289.0
offset_top = 513.0
offset_right = 377.0
offset_bottom = 536.0
text = "Pin spacing"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
